# qorrax

./: .gitignore  CMakeLists.txt  README.md  rt.ppm  run.sh
src/: camera.h  color.h  hittable.h  main.cc  material.h  sphere.h  utilities.h  vec3.h
